// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Nav /> should render default snapshot 1`] = `
.c0 {
  background: #292b2f;
  width: 100%;
  height: 4.11em;
  display: flex;
  flex-flow: row;
  justify-content: space-around;
  align-items: center;
}

.c1 {
  font-family: 'Oswald',Impact,'Franklin Gothic Bold',sans-serif;
  text-decoration: none;
  color: #d7d5d9;
  fill: #d7d5d9;
  font-size: 1.33em;
}

.c1:hover {
  color: #40af93;
  fill: #40af93;
  cursor: pointer;
}

.c1:active,
.c1.active {
  color: #40af93;
  fill: #40af93;
}

<nav
  class="c0"
>
  <a
    class="c1"
    color="primary"
    href="/about"
  >
    About
  </a>
  <a
    class="c1"
    color="primary"
    href="/projects"
  >
    Projects
  </a>
  <a
    class="c1"
    color="primary"
    href="/contact"
  >
    Contact
  </a>
</nav>
`;

exports[`<Nav /> should render snapshot with not isEnglish 1`] = `
.c0 {
  background: #292b2f;
  width: 100%;
  height: 4.11em;
  display: flex;
  flex-flow: row;
  justify-content: space-around;
  align-items: center;
}

.c1 {
  font-family: 'Oswald',Impact,'Franklin Gothic Bold',sans-serif;
  text-decoration: none;
  color: #d7d5d9;
  fill: #d7d5d9;
  font-size: 1.33em;
}

.c1:hover {
  color: #40af93;
  fill: #40af93;
  cursor: pointer;
}

.c1:active,
.c1.active {
  color: #40af93;
  fill: #40af93;
}

<nav
  class="c0"
>
  <a
    class="c1"
    color="primary"
    href="/about"
  >
    Sobre Mi
  </a>
  <a
    class="c1"
    color="primary"
    href="/projects"
  >
    Proyectos
  </a>
  <a
    class="c1"
    color="primary"
    href="/contact"
  >
    Contacto
  </a>
</nav>
`;
